--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -35,7 +35,7 @@ curl \
         "source":  "openAi",
         "apiKey": "<your-OpenAI-API-key>",
         "model": "text-embedding-ada-002",
-        "documentTemplate": "A movie titled '{{doc.title}}' whose description starts with {{doc.overview|truncatewords: 20}}"
+        "documentTemplate": "A movie titled \'{{doc.title}}\' whose description starts with {{doc.overview|truncatewords: 20}}"
       },
       "image": {
         "source": "userProvided",
@@ -43,7 +43,7 @@ curl \
       "translation": {
         "source": "huggingFace",
         "model": "sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2",
-        "documentTemplate": "A movie titled '{{doc.title}}' whose description starts with {{doc.overview|truncatewords: 20}}"
+        "documentTemplate": "A movie titled \'{{doc.title}}\' whose description starts with {{doc.overview|truncatewords: 20}}"
       }
     }
   }'
