--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -39,6 +39,7 @@ curl \
       },
       "image": {
         "source": "userProvided",
+        "dimensions": 512,
       },
       "translation": {
         "source": "huggingFace",
