--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -183,6 +183,7 @@ Done by @irevoire in #4238
 * Fix: the payload size limit is now also applied to all routes, not only routes to add and update documents (#4231) @Karribalu
 * Fix: typo tolerance is ineffective for attributes with similar content (related issue: #4256)
 * Fix: the geosort is no longer ignored after the first bucket of a preceding `sort` ranking rule (#4226)
+* Fix hang on `/indexes` and `/stats` routes (#4308) @dureuill
 
 # Misc
 
