--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -184,6 +184,7 @@ Done by @irevoire in #4238
 * Fix: typo tolerance is ineffective for attributes with similar content (related issue: #4256)
 * Fix: the geosort is no longer ignored after the first bucket of a preceding `sort` ranking rule (#4226)
 * Fix hang on `/indexes` and `/stats` routes (#4308) @dureuill
+* Limit the number of values returned by the facet search based on `maxValuePerFacet` setting (#4311) @Kerollmops
 
 # Misc
 
