--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -179,6 +179,7 @@ Done by @irevoire in #4238
 
 # Fixes 🐞
 
+* Fix document formatting performances during search (#4313) @ManyTheFish 
 * The dump tasks are now cancellable (#4208) @irevoire
 * Fix: the payload size limit is now also applied to all routes, not only routes to add and update documents (#4231) @Karribalu
 * Fix: typo tolerance is ineffective for attributes with similar content (related issue: #4256)
