--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -201,5 +201,4 @@ Done by @irevoire in #4238
   * Fix puffin in the index scheduler (#4234) @irevoire
   * Remove the actix-web dependency from (#4239) @Kerollmops
 
-❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @Karribalu, and @vivek-26
+❤️ Thanks again to our external contributors: @Karribalu, and @vivek-26
