First draft for rc0

--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -1,9 +1,9 @@
-# v1.X.0 release changelogs
+# v1.7.0 release changelogs
 
 <!-- The following line should ONLY be put PRE-release changelogs -->
 ⚠️ Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-Meilisearch v1.X introduces ... TBD
+Meilisearch v1.7.0 mostly focuses on improving v1.6.0 features, indexing speed and hybrid search. GPU computing is now supported.
 
 <!-- The following lines should NOT be put in the PRE-release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
@@ -12,25 +12,78 @@ Meilisearch v1.X introduces ... TBD
 Some SDKs might not include all new features—consult the project repository for detailed information. Is a feature you need missing from your chosen SDK? Create an issue letting us know you need it, or, for open-source karma points, open a PR implementing it (we'll love you for that ❤️).
 
 # New features and improvements 🔥
+
+## Add GPU support to compute embeddings (experimental feature)
+
+Enabling the CUDA feature allows using an available GPU to compute embeddings with a `huggingFace` embedder.
+On an AWS Graviton 2, this yields a x3 - x5 improvement on indexing time.
+
+👇 How to enable GPU support through CUDA for HuggingFace embedding generation:
+
+**Prerequisites**
+
+- Linux distribution with a compatible CUDA version
+- NVidia GPU with CUDA support
+- A recent Rust compiler to compile Meilisearch from source
+
+**Steps**
+
+1. Follow [the guide](https://huggingface.github.io/candle/guide/installation.html) to install the CUDA dependencies
+2. Clone Meilisearch: `git clone https://github.com/meilisearch/meilisearch.git`
+3. Compile Meilisearch with the `cuda` feature: `cargo build --release --features cuda`
+4. In the freshly compiled Meilisearch, enable the vector store experimental feature:
+```bash
+❯ curl \
+  -X PATCH 'http://localhost:7700/experimental-features/' \
+  -H 'Content-Type: application/json'  \
+--data-binary '{ "vectorStore": true }'
+```
+5. Add an HuggingFace embedder to the settings:
+```bash
+curl \
+-X PATCH 'http://localhost:7700/indexes/your_index/settings/embedders' \
+-H 'Content-Type: application/json' --data-binary \
+'{ "default": { "source": "huggingFace" } }'
+```
+
+Done by @dureuill in #4304.
+
+## Improve indexing speed
+
+* Auto-batch the task deletions to reduce indexing time (#4316) @irevoire
+* Improve indexing speed for vector store (related to [Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677)) (#4332) @Kerollmops #irevoire
+* TBD
+
+## Logs format changes
+
+TBD
+
+## Stabilize `scoreDetails` feature
+
 TBD
 
 ## Other improvements
-TBD
+* Related to the [Prometheus experimental feauture](https://github.com/orgs/meilisearch/discussions/625): add job variable to Grafana dashboard (#4330) @capJavert
+* Charabia's improvements -> TBD
 
 # Fixes 🐞
+
 TBD
 
 # Misc
 
 * Dependencies upgrade
- * TBD
+  * Bump rustls-webpki from 0.101.3 to 0.101.7 (#4263)
+  * Bump h2 from 0.3.20 to 0.3.24 (#4345)
+  * Update the dependencies (#4332) @Kerollmops
 * CIs and tests
-  * TBD
+  * Update SDK test dependencies (#4293) @curquiza
 * Documentation
-  * TBD
+  * Add Setting API reminder in issue template (#4325) @ManyTheFish
+  * Update README (#4319) @codesmith-emmy
 * Misc
- * TBD
+  * Fix compilation warnings (#4295) @irevoire
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): TBD
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @capJavert and @codesmith-emmy
 - [Charabia](https://github.com/meilisearch/charabia): TBD
