--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -100,7 +100,7 @@ Done by @dureuill in #4304.
 ## Improve indexing speed & reduce memory crashes
 
 * Auto-batch the task deletions to reduce indexing time (#4316) @irevoire
-* Improve indexing speed for vector store (related to [Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677)) (#4332) @Kerollmops #irevoire
+* Improve indexing speed for vector store (makes the [Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677) indexing time more than 10 times faster) (#4332) @Kerollmops @irevoire
 * Multiple technical and internal indexing improvements; more details [in the PR](https://github.com/meilisearch/meilisearch/pull/4350) (#4350) @ManyTheFish
 * Reduce memory usage, so reduce the memory crashes, by caping the maximum memory of the grenad sorters (#4388) @Kerollmops
 
