--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -204,7 +204,7 @@ This new version of Meilisearch introduces 3 new experimental routes
 ⚠️ Some remarks on this `POST /logs/stream` route:
 - You can have only one listener at a time
 - Listening to the route doesn’t seem to work with `xh` or `httpie` for the moment
-- When killing the listener, it may stay installed on Meilisearch for some time, and you will need to call the next route to get rid of it.
+- When killing the listener, it may stay installed on Meilisearch for some time, and you will need to call the `DELETE /logs/stream` route to get rid of it.
 
 🗣️ This feature is experimental, and we need your help to improve it! Share your thoughts and feedback on this [GitHub discussion](https://github.com/orgs/meilisearch/discussions/721).
 
