Apply suggestions from code review
Co-authored-by: Clément Renault <clement@meilisearch.com>

--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -36,7 +36,7 @@ It means that it is now possible to pass the dimensions field when using the `Op
 
 There are some rules, though, we detail with these examples:
 
-```json
+```json5
 "embedders": {
   "large": {
     "source": "openAi",
@@ -60,7 +60,7 @@ There are some rules, though, we detail with these examples:
 }
 ```
 
-Done in #4375 by Gosti.
+Done in #4375 by @Gosti.
 
 ### Add GPU support to compute embeddings
 
@@ -79,7 +79,7 @@ On an AWS Graviton 2, this yields a x3 - x5 improvement on indexing time.
 
 1. Follow [the guide](https://huggingface.github.io/candle/guide/installation.html) to install the CUDA dependencies
 2. Clone Meilisearch: `git clone https://github.com/meilisearch/meilisearch.git`
-3. Compile Meilisearch with the `cuda` feature: `cargo build --release --features cuda`
+3. Compile Meilisearch with the `cuda` feature: `cargo build --release --package meilisearch --features cuda`
 4. In the freshly compiled Meilisearch, enable the vector store experimental feature:
 ```bash
 ❯ curl \
@@ -162,7 +162,7 @@ Done by @irevoire in #4391
 
 ### Log format change
 
-⚠️ If you were doing any automation based on our log, be aware of the changes. More information [here](https://meilisearch.notion.site/Logs-trace-changes-in-v1-7-0-6dd111ecd66448aba30d2f3cef212749).
+⚠️ If you did any automation based on Meilisearch logs, be aware of the changes. More information [here](https://meilisearch.notion.site/Logs-trace-changes-in-v1-7-0-6dd111ecd66448aba30d2f3cef212749).
 
 The default log format evolved slightly from this:
 
@@ -197,7 +197,7 @@ This new version of Meilisearch introduces 3 new experimental routes
 
 ## Other improvements
 
-* Related to the [Prometheus experimental feauture](https://github.com/orgs/meilisearch/discussions/625): add job variable to Grafana dashboard (#4330) @capJavert
+* Related to the [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): add job variable to Grafana dashboard (#4330) @capJavert
 * Charabia's improvements -> TBD
 
 # Fixes 🐞
