Update following rc1

--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -102,6 +102,7 @@ Done by @dureuill in #4304.
 * Auto-batch the task deletions to reduce indexing time (#4316) @irevoire
 * Improve indexing speed for vector store (makes the [Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677) indexing time more than 10 times faster) (#4332) @Kerollmops @irevoire
 * Reduce memory usage, so reduce the memory crashes, by caping the maximum memory of the grenad sorters (#4388) @Kerollmops
+* Multiple technical and internal indexing improvements; more details [in the PR](https://github.com/meilisearch/meilisearch/pull/4350) (#4350) @ManyTheFish
 
 ## Stabilize `scoreDetails` feature
 
@@ -176,13 +177,39 @@ To this:
 2024-02-06T13:58:14.710803Z  INFO actix_server::builder: 200: starting 10 workers
 ```
 
+### Experimental: choose your log format
+
+And one new CLI parameter is introduced called `--experimental_logs_format`. This lets you specify the log format you want to use on the console.
+
+Accepted values are:
+
+- `human`: the default human-readable one
+- `json`: JSON structured logs
+
+🗣️ This feature is experimental, and we need your help to improve it! Share your thoughts and feedback on this [GitHub discussion](https://github.com/orgs/meilisearch/discussions/723).
+
+⚠️ Experimental features may be incompatible between Meilisearch versions.
+
 ### Experimental: new routes to manage logs
 
 This new version of Meilisearch introduces 3 new experimental routes
 - `POST /logs/stream`: streams the log happening in real-time. Requires two parameters:
-  - `target`: selects what logs you’re interested in. It takes the form of `code_part=log_level`. For example, `index_scheduler=info`
+  - `target`: defines the log level and on which part of the engine you want to apply it. It takes the form of `code_part=log_level`, for example, `index_scheduler=info`. If you want to apply the changes to the whole engine, omit `code_part=`. Valid values for log level are: `trace,` `debug,` `info,` `warn,` `error`, or `off`.
   - `mode`: selects in what format of log you want. Two options are available: `fmt` (basic logs) or `profile` (a way more complex trace)
 - `DELETE /logs/stream`: stops the listener from the meilisearch perspective. Does not require any parameters.
+- `POST /logs/stderr`: Update the log level used in the console. It takes one parameter, `target`, which is the same as the target of the `POST /logs/stream` route.
+
+An example to disable any log from actix, but to keep all other logs at the `DEBUG` level:
+
+```bash
+curl \
+  -X POST http://localhost:7700/logs/stream \
+  -H 'Content-Type: application/json' \
+  --data-binary '{
+      "mode": "human",
+      "target": "actix=off,debug"
+    }'
+```
 
 💡 *More information in the [New experimental routes section of this file](https://meilisearch.notion.site/Logs-trace-changes-in-v1-7-0-6dd111ecd66448aba30d2f3cef212749).*
 
@@ -198,7 +225,7 @@ This new version of Meilisearch introduces 3 new experimental routes
 ## Other improvements
 
 * Related to the [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): add job variable to Grafana dashboard (#4330) @capJavert
-* Charabia's improvements -> TBD
+* Multiple language support improvements, including the Vietnamese Normalization (Ð and Đ into d). Now uses Charabia [v0.8.7](https://github.com/meilisearch/charabia/releases/tag/v0.8.7). (#4365) @agourlay, @choznerol, @ngdbao, @timvisee, @xshadowlegendx, and @ManyTheFish
 
 # Fixes 🐞
 
@@ -220,4 +247,4 @@ TBD
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @capJavert, @codesmith-emmy and @Gosti
-- [Charabia](https://github.com/meilisearch/charabia): TBD
+- [Charabia](https://github.com/meilisearch/charabia): @agourlay, @choznerol, @ngdbao, @timvisee, and @xshadowlegendx
