--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -242,6 +242,7 @@ TBD
 * Documentation
   * Add Setting API reminder in issue template (#4325) @ManyTheFish
   * Update README (#4319) @codesmith-emmy
+  * Fix broken links in README.md (#4360) @Elliot67
 * Misc
   * Fix compilation warnings (#4295) @irevoire
 
