--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -247,5 +247,5 @@ TBD
   * Fix compilation warnings (#4295) @irevoire
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @capJavert, @codesmith-emmy and @Gosti
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @capJavert, @codesmith-emmy, @Elliot67 and @Gosti
 - [Charabia](https://github.com/meilisearch/charabia): @agourlay, @choznerol, @ngdbao, @timvisee, and @xshadowlegendx
