--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -225,7 +225,7 @@ curl \
 ## Other improvements
 
 * Related to the [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): add job variable to Grafana dashboard (#4330) @capJavert
-* Multiple language support improvements, including the Vietnamese Normalization (Ð and Đ into d). Now uses Charabia [v0.8.7](https://github.com/meilisearch/charabia/releases/tag/v0.8.7). (#4365) @agourlay, @choznerol, @ngdbao, @timvisee, @xshadowlegendx, and @ManyTheFish
+* Multiple language support improvements, including expanded Vietnamese normalization (Ð and Đ into d). Now uses Charabia [v0.8.7](https://github.com/meilisearch/charabia/releases/tag/v0.8.7). (#4365) @agourlay, @choznerol, @ngdbao, @timvisee, @xshadowlegendx, and @ManyTheFish
 
 # Fixes 🐞
 
