Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -3,7 +3,7 @@
 <!-- The following line should ONLY be put PRE-release changelogs -->
 ⚠️ Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-Meilisearch v1.7.0 mostly focuses on improving v1.6.0 features, indexing speed and hybrid search. GPU computing is now supported.
+Meilisearch v1.7.0 focuses on improving v1.6.0 features, indexing speed and hybrid search.
 
 <!-- The following lines should NOT be put in the PRE-release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
@@ -13,7 +13,7 @@ Some SDKs might not include all new features—consult the project repository fo
 
 # New features and improvements 🔥
 
-## Improve AI with Meilisearch (experimental feature)
+## Improved AI-powered search — Experimental
 
 🗣️ AI work is still experimental and we need your help to improve it! Share your thoughts and feedback on this [GitHub discussion](https://github.com/orgs/meilisearch/discussions/677).
 
@@ -23,7 +23,7 @@ To use it, you need to enable `vectorSearch` through [the `/experimental-feature
 
 ### Add new OpenAI embedding models & abbility to override their models dimensions
 
-When using `OpenAi` as `source` in your `embedders` index settings (an example [here](https://www.meilisearch.com/docs/learn/experimental/vector_search#generate-auto-embeddings-with-openai)), you can now specify two new models:
+When [configuring  OpenAI embedders](https://www.meilisearch.com/docs/learn/experimental/vector_search#generate-auto-embeddings-with-openai)), you can now specify two new models:
 - `text-embedding-3-small` with a default dimension of 1536.
 - `text-embedding-3-large` with a default dimension of 3072.
 
@@ -33,8 +33,6 @@ The new models:
 - allow to set up the dimensions of the embeddings to control the trade-off between accuracy and performance (including storage)
 
 It means that it is now possible to pass the dimensions field when using the `OpenAi` source. This was previously only available for the `userProvided` source in the previous releases.
-
-There are some rules, though, we detail with these examples:
 
 ```json5
 "embedders": {
@@ -62,7 +60,7 @@ There are some rules, though, we detail with these examples:
 
 Done in #4375 by @Gosti.
 
-### Add GPU support to compute embeddings
+### GPU support when computing Hugging Face embeddings
 
 Enabling the CUDA feature allows using an available GPU to compute embeddings with a `huggingFace` embedder.
 On an AWS Graviton 2, this yields a x3 - x5 improvement on indexing time.
