Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -95,18 +95,18 @@ curl \
 
 Done by @dureuill in #4304.
 
-## Improve indexing speed & reduce memory crashes
+## Improved indexing speed and reduced memory crashes
 
-* Auto-batch the task deletions to reduce indexing time (#4316) @irevoire
-* Improve indexing speed for vector store (makes the [Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677) indexing time more than 10 times faster) (#4332) @Kerollmops @irevoire
+* Auto-batch task deletion to reduce indexing time (#4316) @irevoire
+* Improved indexing speed for vector store ([Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677) indexing time more than 10 times faster) (#4332) @Kerollmops @irevoire
 * Reduce memory usage, so reduce the memory crashes, by caping the maximum memory of the grenad sorters (#4388) @Kerollmops
-* Multiple technical and internal indexing improvements; more details [in the PR](https://github.com/meilisearch/meilisearch/pull/4350) (#4350) @ManyTheFish
+* Added [multiple technical and internal indexing improvements](https://github.com/meilisearch/meilisearch/pull/4350) (#4350) @ManyTheFish
 
-## Stabilize `scoreDetails` feature
+## Stabilized `showRankingScoreDetails`
 
-In [v1.3.0](https://github.com/meilisearch/meilisearch/releases/tag/v1.3.0), we introduced the experimental feature `scoreDetails`. We got enough positive feedback on the feature, and we now stabilize it, making this feature enabled by default.
+The `showRankingScoreDetails` search parameter, first introduce as an experimental feature in Meilisearch [v1.3.0](https://github.com/meilisearch/meilisearch/releases/tag/v1.3.0), is now a stable feature.
 
-View detailed scores per ranking rule for each document with the `showRankingScoreDetails` search parameter:
+Use it with the `/search` endpoint to view detailed scores per ranking rule for each returned document:
 
 ```bash
 curl \
@@ -115,7 +115,7 @@ curl \
   --data-binary '{ "q": "Batman Returns", "showRankingScoreDetails": true }'
 ```
 
-When `showRankingScoreDetails` is set to `true`, returned documents include a `_rankingScoreDetails` field. This field contains score values for each ranking rule.
+When `showRankingScoreDetails` is set to `true`, returned documents include a `_rankingScoreDetails` field:
 
 ```json
 "_rankingScoreDetails": {
@@ -153,7 +153,7 @@ When `showRankingScoreDetails` is set to `true`, returned documents include a `_
 
 Done by @dureuill in #4389.
 
-## Logs improvements
+## Improved logging
 
 We made some changes regarding our logs to help with debugging and bug reporting.
 
@@ -175,7 +175,7 @@ To this:
 2024-02-06T13:58:14.710803Z  INFO actix_server::builder: 200: starting 10 workers
 ```
 
-### Experimental: choose your log format
+### Log output format — Experimental
 
 And one new CLI parameter is introduced called `--experimental_logs_format`. This lets you specify the log format you want to use on the console.
 
@@ -188,7 +188,7 @@ Accepted values are:
 
 ⚠️ Experimental features may be incompatible between Meilisearch versions.
 
-### Experimental: new routes to manage logs
+### New `/logs/stream` and `/logs/stderr` routes — Experimental
 
 This new version of Meilisearch introduces 3 new experimental routes
 - `POST /logs/stream`: streams the log happening in real-time. Requires two parameters:
