--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -15,11 +15,9 @@ Some SDKs might not include all new features—consult the project repository fo
 
 ## Improved AI-powered search — Experimental
 
-🗣️ AI work is still experimental and we need your help to improve it! Share your thoughts and feedback on this [GitHub discussion](https://github.com/orgs/meilisearch/discussions/677).
+To activate AI-powered search, set `vectorStore` to `true` in [the `/experimental-features` route](https://www.meilisearch.com/docs/reference/api/experimental_features). Consult the [Meilisearch documentation](https://www.meilisearch.com/docs/learn/experimental/vector_search#vector-search-with-auto-embeddings) for more information.
 
-To use it, you need to enable `vectorSearch` through [the `/experimental-features` route](https://www.meilisearch.com/docs/reference/api/experimental_features).
-
-💡 More documentation about AI search with Meilisearch [here](https://www.meilisearch.com/docs/learn/experimental/vector_search#vector-search-with-auto-embeddings).
+🗣️ This is an experimental feature and we need your help to improve it! Share your thoughts and feedback on this [GitHub discussion](https://github.com/orgs/meilisearch/discussions/677).
 
 ### Add new OpenAI embedding models & abbility to override their models dimensions
 
