--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -25,10 +25,7 @@ When [configuring  OpenAI embedders](https://www.meilisearch.com/docs/learn/expe
 - `text-embedding-3-small` with a default dimension of 1536.
 - `text-embedding-3-large` with a default dimension of 3072.
 
-The new models:
-- are cheaper
-- produce more relevant results in standardized tests
-- allow to set up the dimensions of the embeddings to control the trade-off between accuracy and performance (including storage)
+These new models are cheaper and improve search result relevancy.
 
 It means that it is now possible to pass the dimensions field when using the `OpenAi` source. This was previously only available for the `userProvided` source in the previous releases.
 
