Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -19,7 +19,7 @@ To activate AI-powered search, set `vectorStore` to `true` in [the `/experimenta
 
 🗣️ This is an experimental feature and we need your help to improve it! Share your thoughts and feedback on this [GitHub discussion](https://github.com/orgs/meilisearch/discussions/677).
 
-### Add new OpenAI embedding models & abbility to override their models dimensions
+### New OpenAI embedding models
 
 When [configuring  OpenAI embedders](https://www.meilisearch.com/docs/learn/experimental/vector_search#generate-auto-embeddings-with-openai)), you can now specify two new models:
 - `text-embedding-3-small` with a default dimension of 1536.
@@ -27,7 +27,9 @@ When [configuring  OpenAI embedders](https://www.meilisearch.com/docs/learn/expe
 
 These new models are cheaper and improve search result relevancy.
 
-It means that it is now possible to pass the dimensions field when using the `OpenAi` source. This was previously only available for the `userProvided` source in the previous releases.
+### Custom OpenAI model dimensions
+
+You can configure `dimensions` for sources using the new OpenAI models: `text-embedding-3-small` and `text-embedding-3-large`. Dimensions must be bigger than 0 and smaller than the model size:
 
 ```json5
 "embedders": {
@@ -57,36 +59,16 @@ Done in #4375 by @Gosti.
 
 ### GPU support when computing Hugging Face embeddings
 
-Enabling the CUDA feature allows using an available GPU to compute embeddings with a `huggingFace` embedder.
-On an AWS Graviton 2, this yields a x3 - x5 improvement on indexing time.
+Activate CUDA to use Nvidia GPUs when computing Hugging Face embeddings. This can significantly improve embedding generation speeds.
 
-👇 How to enable GPU support through CUDA for HuggingFace embedding generation:
+To enable GPU support through CUDA for HuggingFace embedding generation:
 
-**Prerequisites**
 
-- Linux distribution with a compatible CUDA version
-- NVidia GPU with CUDA support
-- A recent Rust compiler to compile Meilisearch from source
-
-**Steps**
-
-1. Follow [the guide](https://huggingface.github.io/candle/guide/installation.html) to install the CUDA dependencies
-2. Clone Meilisearch: `git clone https://github.com/meilisearch/meilisearch.git`
-3. Compile Meilisearch with the `cuda` feature: `cargo build --release --package meilisearch --features cuda`
-4. In the freshly compiled Meilisearch, enable the vector store experimental feature:
-```bash
-❯ curl \
-  -X PATCH 'http://localhost:7700/experimental-features/' \
-  -H 'Content-Type: application/json'  \
---data-binary '{ "vectorStore": true }'
-```
-5. Add an HuggingFace embedder to the settings:
-```bash
-curl \
--X PATCH 'http://localhost:7700/indexes/your_index/settings/embedders' \
--H 'Content-Type: application/json' --data-binary \
-'{ "default": { "source": "huggingFace" } }'
-```
+1. [Install CUDA dependencies](https://huggingface.github.io/candle/guide/installation.html)
+2. Clone and compile Meilisearch with the `cuda` feature: `cargo build --release --package meilisearch --features cuda`
+3. Launch your freshly compiled Meilisearch binary
+4. [Activate vector search](https://www.meilisearch.com/docs/learn/experimental/vector_search#activate-vector-search)
+5. [Add a Hugging Face embedder](https://www.meilisearch.com/docs/learn/experimental/vector_search#generate-auto-embeddings-with-huggingface)
 
 Done by @dureuill in #4304.
 
