--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -168,14 +168,26 @@ Relaunch your instance passing `json` to the `--experimental-logs-mode` command-
 
 ### New `/logs/stream` and `/logs/stderr` routes — Experimental
 
-This new version of Meilisearch introduces 3 new experimental routes
-- `POST /logs/stream`: streams the log happening in real-time. Requires two parameters:
-  - `target`: defines the log level and on which part of the engine you want to apply it. It takes the form of `code_part=log_level`, for example, `index_scheduler=info`. If you want to apply the changes to the whole engine, omit `code_part=`. Valid values for log level are: `trace,` `debug,` `info,` `warn,` `error`, or `off`.
-  - `mode`: selects in what format of log you want. Two options are available: `fmt` (basic logs) or `profile` (a way more complex trace)
-- `DELETE /logs/stream`: stops the listener from the meilisearch perspective. Does not require any parameters.
-- `POST /logs/stderr`: Update the log level used in the console. It takes one parameter, `target`, which is the same as the target of the `POST /logs/stream` route.
+Meilisearch v1.7 introduces 2 new experimental API routes: `/logs/stream` and `/logs/stderr`. 
 
-An example to disable any log from actix, but to keep all other logs at the `DEBUG` level:
+Use the `/experimental-features` route to activate both routes during runtime:
+
+```bash
+curl \
+  -X PATCH 'http://localhost:7700/experimental-features/' \
+  -H 'Content-Type: application/json'  \
+--data-binary '{
+    "logsRoute": true
+  }'
+```
+
+🗣️ This feature is experimental, and we need your help to improve it! Share your thoughts and feedback on this [GitHub discussion](https://github.com/orgs/meilisearch/discussions/721).
+
+⚠️ Experimental features may be incompatible between Meilisearch versions.
+
+#### `/logs/stream`
+
+Use the `POST` endpoint to output logs in a stream. The following example disables actix logging and keeps all other logs at the `DEBUG` level:
 
 ```bash
 curl \
@@ -187,16 +199,32 @@ curl \
     }'
 ```
 
-💡 *More information in the [New experimental routes section of this file](https://meilisearch.notion.site/Logs-trace-changes-in-v1-7-0-6dd111ecd66448aba30d2f3cef212749).*
+This endpoint requires two paramaters:
+- `target`: defines the log level and on which part of the engine you want to apply it. Must be a string formatted as `code_part=log_level`. Omit `code_part=` to set a single log level for the whole strram. Valid values for log level are: `trace,` `debug,` `info,` `warn,` `error`, or `off`
+- `mode`: accepts `fmt` (basic) or `profile` (verbose trace)
 
-⚠️ Some remarks on this `POST /logs/stream` route:
-- You can have only one listener at a time
-- Listening to the route doesn’t seem to work with `xh` or `httpie` for the moment
-- When killing the listener, it may stay installed on Meilisearch for some time, and you will need to call the `DELETE /logs/stream` route to get rid of it.
+Use the `DELETE` endpoint of `/logs/stream` to interrupt a stream:
+```bash
+curl -X DELETE http://localhost:7700/logs/stream
+```
 
-🗣️ This feature is experimental, and we need your help to improve it! Share your thoughts and feedback on this [GitHub discussion](https://github.com/orgs/meilisearch/discussions/721).
+You may only have one listener at a time. Meilisearch log streams are not compatible with `xh` or `httpie`.
 
-⚠️ Experimental features may be incompatible between Meilisearch versions.
+#### `/logs/stderr`
+
+Use the `POST` endpoint to configure the default log output for non-stream logs:
+
+```bash
+curl \
+  -X POST http://localhost:7700/logs/stream \
+  -H 'Content-Type: application/json' \
+  --data-binary '{
+      "target": "debug"
+    }'
+```
+
+`/logs/stderr` accepts one parameter:
+- `target`: defines the log level and on which part of the engine you want to apply it. Must be a string formatted as `code_part=log_level`. Omit `code_part=` to set a single log level for the whole strram. Valid values for log level are: `trace,` `debug,` `info,` `warn,` `error`, or `off`
 
 ## Other improvements
 
