--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -76,7 +76,7 @@ Done by @dureuill in #4304.
 
 * Auto-batch task deletion to reduce indexing time (#4316) @irevoire
 * Improved indexing speed for vector store ([Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677) indexing time more than 10 times faster) (#4332) @Kerollmops @irevoire
-* Reduce memory usage, so reduce the memory crashes, by caping the maximum memory of the grenad sorters (#4388) @Kerollmops
+* Capped the maximum memory of grenad sorters to reduce memory usage (#4388) @Kerollmops
 * Added [multiple technical and internal indexing improvements](https://github.com/meilisearch/meilisearch/pull/4350) (#4350) @ManyTheFish
 
 ## Stabilized `showRankingScoreDetails`
