--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -78,6 +78,7 @@ Done by @dureuill in #4304.
 * Improved indexing speed for vector store ([Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677) indexing time more than 10 times faster) (#4332) @Kerollmops @irevoire
 * Capped the maximum memory of grenad sorters to reduce memory usage (#4388) @Kerollmops
 * Added [multiple technical and internal indexing improvements](https://github.com/meilisearch/meilisearch/pull/4350) (#4350) @ManyTheFish
+* [Enhance facet incremental indexing](https://github.com/meilisearch/meilisearch/pull/4433) (#4433) and [change the threshold triggering it](https://github.com/meilisearch/meilisearch/pull/4462) (#4462) @ManyTheFish
 
 ## Stabilized `showRankingScoreDetails`
 
