--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -234,7 +234,9 @@ curl \
 
 # Fixes 🐞
 
-TBD
+* [Make update file deletion atomic](https://github.com/meilisearch/meilisearch/pull/4435) by @irevoire
+* [Do not omit vectors when importing a dump](https://github.com/meilisearch/meilisearch/pull/4446) by @dureuill
+* [Put a bound on OpenAI timeout](https://github.com/meilisearch/meilisearch/pull/4459) by @dureuill 
 
 # Misc
 
