--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -33,24 +33,14 @@ You can configure `dimensions` for sources using the new OpenAI models: `text-em
 
 ```json5
 "embedders": {
-  "large": {
+  "new_model": {
     "source": "openAi",
     "model": "text-embedding-3-large",
     "dimensions": 512 // must be >0, must be <= 3072 for "text-embedding-3-large"
   },
-  "small": {
+  "legacy_model": {
     "source": "openAi",
-    "model": "text-embedding-3-small",
-    "dimensions": 1024 // must be >0, must be <= 1536 for "text-embedding-3-small"
-  },
-  "legacy": {
-    "source": "openAi",
-    "model": "text-embedding-ada-002",
-    "dimensions": 1536 // must =1536  for "text-embedding-ada-002"
-  },
-  "omitted_dimensions": { // uses the default dimension
-    "source": "openAi",
-    "model": "text-embedding-ada-002",
+    "model": "text-embedding-ada-002"
   }
 }
 ```
