--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -43,7 +43,8 @@ You can configure `dimensions` for sources using the new OpenAI models: `text-em
     "model": "text-embedding-ada-002"
   }
 }
-```
+
+You cannot customize dimensions for older OpenAI models such as `text-embedding-ada-002`. Setting `dimensions` to any value except the default size of these models will result in an error.
 
 Done in #4375 by @Gosti.
 
