Missing updates following rc2

--- a/meilisearch-release-changelog/v1.7.0.md
+++ b/meilisearch-release-changelog/v1.7.0.md
@@ -69,7 +69,8 @@ Done by @dureuill in #4304.
 * Improved indexing speed for vector store ([Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677) indexing time more than 10 times faster) (#4332) @Kerollmops @irevoire
 * Capped the maximum memory of grenad sorters to reduce memory usage (#4388) @Kerollmops
 * Added [multiple technical and internal indexing improvements](https://github.com/meilisearch/meilisearch/pull/4350) (#4350) @ManyTheFish
-* [Enhance facet incremental indexing](https://github.com/meilisearch/meilisearch/pull/4433) (#4433) and [change the threshold triggering it](https://github.com/meilisearch/meilisearch/pull/4462) (#4462) @ManyTheFish
+* Enhance facet incremental indexing (#4433) @ManyTheFish
+* Change the threshold triggering incremental indexing (#4462) @ManyTheFish
 
 ## Stabilized `showRankingScoreDetails`
 
@@ -131,9 +132,9 @@ Done by @irevoire in #4391
 Log messages now follow a different pattern:
 
 ```bash
-# new format ✅ 
+# new format ✅
 2024-02-06T14:54:11Z INFO actix_server::builder: 200: starting 10 workers
-# old format ❌ 
+# old format ❌
 [2024-02-06T14:54:11Z INFO  actix_server::builder] starting 10 workers
 ```
 
@@ -160,7 +161,7 @@ Relaunch your instance passing `json` to the `--experimental-logs-mode` command-
 
 ### New `/logs/stream` and `/logs/stderr` routes — Experimental
 
-Meilisearch v1.7 introduces 2 new experimental API routes: `/logs/stream` and `/logs/stderr`. 
+Meilisearch v1.7 introduces 2 new experimental API routes: `/logs/stream` and `/logs/stderr`.
 
 Use the `/experimental-features` route to activate both routes during runtime:
 
@@ -222,12 +223,14 @@ curl \
 
 * [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): add job variable to Grafana dashboard (#4330) @capJavert
 * Multiple language support improvements, including expanded Vietnamese normalization (Ð and Đ into d). Now uses Charabia [v0.8.7](https://github.com/meilisearch/charabia/releases/tag/v0.8.7). (#4365) @agourlay, @choznerol, @ngdbao, @timvisee, @xshadowlegendx, and @ManyTheFish
+* New experimental feature: [change the behavior of Meilisearch in a few ways to run meilisearch in a cluster by externalizing the task queue](https://github.com/orgs/meilisearch/discussions/725).
+* Add the content type to the webhook (#4450) @irevoire
 
 # Fixes 🐞
 
-* [Make update file deletion atomic](https://github.com/meilisearch/meilisearch/pull/4435) by @irevoire
-* [Do not omit vectors when importing a dump](https://github.com/meilisearch/meilisearch/pull/4446) by @dureuill
-* [Put a bound on OpenAI timeout](https://github.com/meilisearch/meilisearch/pull/4459) by @dureuill 
+* Make update file deletion atomic (#4435) @irevoire
+* Do not omit vectors when importing a dump (#4446) @dureuill
+* Put a bound on OpenAI timeout (#4459) @dureuill
 
 # Misc
 
@@ -237,6 +240,8 @@ curl \
   * Update the dependencies (#4332) @Kerollmops
 * CIs and tests
   * Update SDK test dependencies (#4293) @curquiza
+  * Remove tests on nightly (#4353) @dureuill
+  * Add subcommand to run benchmarks (#4445) @dureuill
 * Documentation
   * Add Setting API reminder in issue template (#4325) @ManyTheFish
   * Update README (#4319) @codesmith-emmy
